# codenames-discord-bot

./: Cargo.toml  README.md  words.json
docs/: ARCHITECTURE.md
src/: dictionary.rs  game.rs  main.rs  word_bank.rs
