[package]
name = "codenames-bot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.13.0", features = ["full"] }
itertools = "0.10.1"
sqlx = { version = "0.5.9", features = ["runtime-tokio-rustls", "postgres", "time"]}
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.70"
rand = "0.8.4"

[dependencies.serenity]
version = "0.10.10"
default-features = false
features = ["builder","cache", "client", "framework", "standard_framework", "gateway", "model", "http", "utils", "rustls_backend", "collector", "unstable_discord_api"]
